--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ pycparser==2.22
 PyJWT==2.10.1
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2025.1
 requests==2.32.3
 rsa==4.9
